second integration spec passing

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,7 @@
 
       <ul>
         <% @projects.each() do |project| %>
-          <li><a href="/projects/<%= project.id()%>"><%= project.title() %></a> </li>
+          <li><a href="/project/<%= project.id()%>"><%= project.title() %></a> </li>
         <% end %>
       </ul>
 
