--- a/views/project.erb
+++ b/views/project.erb
@@ -9,8 +9,8 @@
   <button type="submit">Update Project</button>
 </form>
 
-<!-- <form action="/project_update" method="post">
+<form action="/project/<%= @project.id() %>" method="post">
   <input name="_method" type="hidden" value="delete">
 
-  <button type="submit">Delete project</button>
-</form> -->
+  <button type="submit">Delete Project</button>
+</form>
