--- a/views/volunteer.erb
+++ b/views/volunteer.erb
@@ -1,3 +1,6 @@
+<h3> Update  this volunteer's name:</h3>
+<h4>Current name is <%= @volunteer.name() %></h4>
+
 <form action="/volunteer/<%= @volunteer.id() %>" method="post">
   <input type="hidden" name="_method" value="patch">
   <label for="name">Rename this volunteer:</label>
