add integration test for add volunteer path

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
       <form action="/project_input" method="post">
         <div class="form-group">
           <label for="title" class="form-label">Assign a title to your project:</label>
-          <input type="text" name="title" class"form-control" id="title" placeholder="Project Name" autofocus>
+          <input type="text" name="title" class"form-control" id="title" autofocus>
           <button type="submit" class="button btn">Create Project</button>
         </div>
       </form>
