cleaned up code and changed styling

--- a/views/project.erb
+++ b/views/project.erb
@@ -18,7 +18,7 @@
           <label for="title">Rename your project:</label>
           <input type="text" name="title" id="title">
 
-          <button type="submit">Update Project</button>
+          <button type="submit" class="button btn">Update Project</button>
         </div>
       </form>
       <br>
@@ -26,9 +26,10 @@
         <div class="form-group">
           <input name="_method" type="hidden" value="delete">
           <label for="delete">Delete your project:</label>
-          <button type="submit">Delete Project</button>
+          <button type="submit" class="button btn">Delete Project</button>
         </div>
       </form>
+      <a href="/"><button class="btn">Return To Homepage</a>
     </div>
   </div>
   <div class="col-sm-6">
@@ -50,4 +51,3 @@
     </div>
   </div>
 </div>
-<a href="/"><button class="btn">Home</a>
