--- a/views/volunteer.erb
+++ b/views/volunteer.erb
@@ -1,17 +1,22 @@
-<h3> Update  this volunteer's name:</h3>
-<h4>Current name is <%= @volunteer.name() %></h4>
+<div class="well">
+  <h3> Update  this volunteer's information:</h3>
+  <h4>Current volunteer is '<%= @volunteer.name() %>'.</h4>
 
-<form action="/volunteer/<%= @volunteer.id() %>" method="post">
-  <input type="hidden" name="_method" value="patch">
-  <label for="name">Rename this volunteer:</label>
-  <input type="text" name="name" id="name">
-  <button type="submit">Update Volunteer</button>
-</form>
+  <form action="/volunteer/<%= @volunteer.id() %>" method="post">
+    <div class="form-group">
+      <input type="hidden" name="_method" value="patch">
+      <label for="name">Rename this volunteer:</label>
+      <input type="text" name="name" id="name">
+      <button type="submit" class="btn">Update Volunteer</button>
+    </div>
+  </form>
 
-<form action="/volunteer/<%= @volunteer.id() %>" method="post">
-  <input name="_method" type="hidden" value="delete">
-  <label for="delete">Delete this volunteer:</label>
-  <button type="submit">Delete Volunteer</button>
-</form>
-
-<a href="/"><button class="btn">Home</a>
+  <form action="/volunteer/<%= @volunteer.id() %>" method="post">
+    <div class="form-group">
+      <input name="_method" type="hidden" value="delete">
+      <label for="delete">Delete this volunteer:</label>
+      <button type="submit" class="btn">Delete Volunteer</button>
+    </div>
+  </form>
+  <a href="/"><button class="btn">Return To Homepage</a>
+</div>
